--- a/src/template.yml
+++ b/src/template.yml
@@ -18,7 +18,7 @@ Actor:
       crew:
         min: 1
         max: 1
-        value: 1
+        current: 1
       crewMembers: []
     living:
       health:
