--- a/src/template.yml
+++ b/src/template.yml
@@ -180,6 +180,9 @@ Item:
       power: 1
       mass: 1
       broken: false
+      costMultiplier: false
+      powerMultiplier: false
+      massMultiplier: false
   class:
     templates:
       - description
