--- a/src/system.yml
+++ b/src/system.yml
@@ -120,6 +120,18 @@ packs:
     module: swnr
     path: packs/ship-weapon.db
     entity: Item    
+  - name: ship-defense
+    label: Ship Defense
+    system: swnr
+    module: swnr
+    path: packs/ship-defense.db
+    entity: Item    
+  - name: ship-fitting
+    label: Ship Fitting
+    system: swnr
+    module: swnr
+    path: packs/ship-fitting.db
+    entity: Item    
 languages:
   - lang: en
     name: English
