--- a/src/packs/ship-weapon/Nuclear Missiles.yml
+++ b/src/packs/ship-weapon/Nuclear Missiles.yml
@@ -2,7 +2,7 @@ data:
   broken: false
   cost: 50000
   costMultiplier: false
-  damage: Special
+  damage: 0
   description: placeholder
   hardpoint: 2
   mass: 1.0
