--- a/src/packs/ship-defense/Point Defense Lasers.yml
+++ b/src/packs/ship-defense/Point Defense Lasers.yml
@@ -9,6 +9,6 @@ data:
   minClass: frigate
   power: 3
   powerMultiplier: false
-img: systems/swnr/assets/icons/game-icons.net/item-icons/bubble-field.svg
+img: systems/swnr/assets/icons/game-icons.net/item-icons/strafe.svg
 name: Point Defense Lasers
 type: shipDefense
