--- a/src/packs/ship-fitting/Fuel scoops.yml
+++ b/src/packs/ship-fitting/Fuel scoops.yml
@@ -9,6 +9,6 @@ data:
   minClass: frigate
   power: 2
   powerMultiplier: false
-img: systems/swnr/assets/icons/game-icons.net/item-icons/power-generator.svg
+img: systems/swnr/assets/icons/game-icons.net/item-icons/energise.svg
 name: Fuel scoops
 type: shipFitting
