applying tortiques changes

--- a/src/packs/ship-defense/Foxer Drones.yml
+++ b/src/packs/ship-defense/Foxer Drones.yml
@@ -2,7 +2,13 @@ data:
   broken: false
   cost: 10000
   costMultiplier: true
-  description: placeholder
+  description: >-
+    These drones are invariably short-lived due to enormous
+    energy signatures they produce, but until the ship's
+    next turn they grant a +2 AC bonus as their emissions
+    confuse foes. Foxer drones are cheaply constructed
+    and essentially free; the only limit on their number
+    is the amount of free space set aside for holding them.
   effect: +2 AC for one round when fired
   mass: 1.0
   massMultiplier: true
