--- a/src/packs/ship-defense/Burst ECM Generator.yml
+++ b/src/packs/ship-defense/Burst ECM Generator.yml
@@ -2,7 +2,13 @@ data:
   broken: false
   cost: 25000
   costMultiplier: true
-  description: placeholder
+  description: >-
+    A high-powered secondary ECM generator can be activated
+    to negate any one otherwise-successful hit against the ship.
+    This generator can be activated after the damage has been
+    rolled, but enemy ships rapidly compensate for the new ECM
+    source, and so the generator can only be used effectively
+    once per engagement.
   effect: Negate one successful hit
   mass: 1.0
   massMultiplier: true
