--- a/src/packs/ship-fitting/Advanced lab.yml
+++ b/src/packs/ship-fitting/Advanced lab.yml
@@ -2,7 +2,14 @@ data:
   broken: false
   cost: 10000
   costMultiplier: true
-  description: placeholder
+  description: >-
+    A lab suitable for investigating alien xenolife, planetary geology,
+    esoteric technology, and other mysteries of the cosmos.
+    The lab contains cold sleep pods adequate to contain alien samples,
+    viro-shielded research cells, high-energy lasers, and other requisite tools.
+    When used to investigate some pehomenon or object,
+    any applicable skill rolls are improved by +1 for a frigate lab,
+    +2 for a cruiser lab, and +3 for capital ship lab.
   effect: Skill bonus for analysis and research
   mass: 2.0
   massMultiplier: false
