--- a/src/packs/ship-fitting/Boarding tubes.yml
+++ b/src/packs/ship-fitting/Boarding tubes.yml
@@ -2,7 +2,13 @@ data:
   broken: false
   cost: 5000
   costMultiplier: true
-  description: placeholder
+  description: >-
+    Armored tubes equipped with laser cutter apertures an be used
+    to forcibly invade a hostile ship, provided the target's engines
+    have been disabled. Ships without boarding tybes have to send
+    invaders across empty space to either make an assault on a doubtless
+    heavily-guarded airlock or cut their way in through the hull
+    with laser cutters and half an hour of work.
   effect: Allows boarding of a hostile disabled ship
   mass: 1.0
   massMultiplier: false
