--- a/src/packs/ship-fitting/Colony core.yml
+++ b/src/packs/ship-fitting/Colony core.yml
@@ -2,7 +2,17 @@ data:
   broken: false
   cost: 100000
   costMultiplier: true
-  description: placeholder
+  description: >-
+    The ship has been designed to act as the core of a future settlement.
+    Once this fitting is engaged, the ship ceases to be operational as a
+    starship, and builds out into a set of habitats, hydroponic gardens,
+    fusion plants, and living spaces siffucient to support up to five times
+    its maximum crew, inclugind enough fabrication and workshop facilities
+    to keep the settlement operational under normal conditions. The settlement
+    can be a deep-space hab, orbital installation, or planetary settlement.
+    In the latter case, the ship must land to form the settlement; even ships
+    without atmospheric configuration can do so, but they can never take off
+    again. Once activated, a colony core can not be re-packed.
   effect: Ship can be deconstructed into a colony base
   mass: 2.0
   massMultiplier: true
