--- a/src/packs/ship-fitting/Drop pod.yml
+++ b/src/packs/ship-fitting/Drop pod.yml
@@ -2,7 +2,13 @@ data:
   broken: false
   cost: 300000
   costMultiplier: false
-  description: placeholder
+  description: >-
+    Armored and stealthed version of cargo lighters, these craft
+    are twice as fast, apply a -3 penalty to tracking and targeting
+    skill checks, and can carry up to one hundred troops or passengers.
+    Many are equipped with assorted Heavy weapons to clear the landing
+    zone, and can be treated as flight-capable gravtaks for purposes
+    of combat. This fitting can be purchased multiple times.
   effect: Stealthed landing pod for troops
   mass: 2.0
   massMultiplier: false
