--- a/src/packs/ship-fitting/Mobile extractor.yml
+++ b/src/packs/ship-fitting/Mobile extractor.yml
@@ -2,7 +2,17 @@ data:
   broken: false
   cost: 50000
   costMultiplier: false
-  description: placeholder
+  description: >-
+    Automated mining and refinery equipment has been built into the ship,
+    allowing it to extract resources from asteroids and planetary surfaces.
+    Careful extraction of specific lodes of valuable minerals can be quite
+    profitable at the GM's discretion, but if the crew is simply melting down
+    available asteroids for raw materials, the unit can refine one ton of
+    usable materials per day worth about 500 credits in most markets. These
+    raw materials can be used to feed a mobile factory, and a ship may have
+    more than one mobile extractor fitted to it to multiple the return
+    if sufficient raw feedstock is available. Operating an extractor
+    reuires at least five crew members.
   effect: Space mining and refinery fittings
   mass: 1.0
   massMultiplier: false
