--- a/src/packs/ship-fitting/Psionic anchorpoint.yml
+++ b/src/packs/ship-fitting/Psionic anchorpoint.yml
@@ -2,7 +2,18 @@ data:
   broken: false
   cost: Special
   costMultiplier: false
-  description: placeholder
+  description: >-
+    This pretech relic is unavailable on the open market in most sectors.
+    Once installed in a ship, it can be "imprinted" by up to a dozen psychics.
+    These psychics can sense and affect any object or location within ten meters
+    of the relic after one minute of concentration, provided they are within
+    the same solar system. Thus, teleporters can always teleport next to the
+    anchorpoint, telepaths can always contact anyone within the affected zone,
+    telekinetics can manipulate objects near the relic, and so forth. The relic
+    can be re-coded to eliminate existing imprints, but any psychic wo gets access
+    to the relic for ten minutes of meditation and focus can imprint on it
+    afterwards. There is no obvious way to tell how many psychics have
+    imprinted to the anchorpoint.
   effect: Focal point for allied psychics' powers
   mass: 0.0
   massMultiplier: false
