--- a/src/packs/ship-fitting/Sensor mask.yml
+++ b/src/packs/ship-fitting/Sensor mask.yml
@@ -2,7 +2,13 @@ data:
   broken: false
   cost: 10000
   costMultiplier: true
-  description: placeholder
+  description: >-
+    The ship can disguise its long-range sensor readings, spoofing scans
+    with the ID tags and apparent hull type of any other ship of its choice.
+    To penetrate this masquerade, the scanning entity must beat a Wis/Program
+    skill check against difficulty 10 plus the Program skill of the masking
+    ship's comms officer. Once the ship is close enough to visually identify,
+    the masking is useless.
   effect: At long distances
   mass: 0.0
   massMultiplier: false
