--- a/src/packs/ship-weapon/Lightning Charge Mantle.yml
+++ b/src/packs/ship-weapon/Lightning Charge Mantle.yml
@@ -3,7 +3,11 @@ data:
   cost: 4000000
   costMultiplier: false
   damage: 1d20
-  description: placeholder
+  description: >-
+    Modulation of the ship's power core emits a cloak
+    of MES lightning. While larger spike drive craft can
+    shunt the energies away harmlessly, fighter-class
+    ships are almost invariably destroyed if hit.
   hardpoint: 2
   mass: 5.0
   massMultiplier: false
