--- a/src/packs/ship-weapon/Plasma Beam.yml
+++ b/src/packs/ship-weapon/Plasma Beam.yml
@@ -3,7 +3,10 @@ data:
   cost: 700000
   costMultiplier: false
   damage: 3d6
-  description: placeholder
+  description: >-
+    With superior targeting and a smaller
+    energy drain than a CPC, a plasma beam
+    sacrifices some armor penetration.
   hardpoint: 2
   mass: 2.0
   massMultiplier: false
