typo fixes and system drive

--- a/src/packs/ship-fitting/Smuggler's hold.yml
+++ b/src/packs/ship-fitting/Smuggler's hold.yml
@@ -3,7 +3,7 @@ data:
   cost: 2500
   costMultiplier: true
   description: >-
-    Carfully-designed storage space intended to conceal illicit cargo
+    Carefully-designed storage space intended to conceal illicit cargo
     from customs inspection. Each installation of this fitting adds 200
     kilograms of cargo space in a fighter, 2 tons in a frigate, 20 tons
     in a cruiser, or 200 tons in a capital ship. Cargo in smuggler's hold
