--- a/src/packs/cyberware/Bioadaptation Augments.yml
+++ b/src/packs/cyberware/Bioadaptation Augments.yml
@@ -1,7 +1,10 @@
 data:
   cost: 10000
   description: >-
-    
+    These additional synthetic organs and filters allow the bearer to survive in
+    thin-atmosphere conditions, as well as tolerate temperatures ranging from Antarctic chill to
+    heat sufficient to boil water. They can also eat a wide range of native life forms for sustenance; no
+    normal planet’s native biology is ever considered immiscible for consumption.
   disabled: false
   effect: Survive near-habitable planetary conditions
   strain: 1
