--- a/src/system.yml
+++ b/src/system.yml
@@ -119,13 +119,13 @@ packs:
     system: swnr
     module: swnr
     path: packs/ship-weapon.db
-    entity: Item    
+    entity: Item
   - name: ship-defense
     label: Ship Defense
     system: swnr
     module: swnr
     path: packs/ship-defense.db
-    entity: Item    
+    entity: Item
   - name: ship-fitting
     label: Ship Fitting
     system: swnr
@@ -137,7 +137,13 @@ packs:
     system: swnr
     module: swnr
     path: packs/cyberware.db
-    entity: Item    
+    entity: Item
+  - name: bestiary
+    label: Bestiary
+    system: swnr
+    module: swnr
+    path: packs/bestiary.db
+    entity: Actor
 languages:
   - lang: en
     name: English
