--- a/src/template.yml
+++ b/src/template.yml
@@ -108,6 +108,8 @@ Actor:
         scene: 0
         day: 0
         max: 0
+      resourceList: []
+      showResourceList: false
   npc:
     templates:
       - living
