--- a/src/template.yml
+++ b/src/template.yml
@@ -183,6 +183,7 @@ Actor:
       engineering: ""
       comms: ""
       bridge: ""
+    cargoCarried: []
   mech:
     templates:
       - vehiclebase
