--- a/src/system.yml
+++ b/src/system.yml
@@ -150,6 +150,12 @@ packs:
     module: swnr
     path: packs/all-items.db
     entity: Item
+  - name: drone-fittings
+    label: Drone Fittings
+    system: swnr
+    module: swnr
+    path: packs/drone-fittings.db
+    entity: Item
 languages:
   - lang: en
     name: English
