--- a/src/packs/bestiary/Barbarian Tribal.yml
+++ b/src/packs/bestiary/Barbarian Tribal.yml
@@ -12,18 +12,70 @@ data:
   speed: 10
 img: systems/swnr/assets/icons/blankface.png
 items:
-  data:
-    cost: 0
-    damage: PLACEHOLDER
-    encumbrance: 0
-    permission:
-      default: 0
-    shock:
-      ac: 15
-      dmg: PLACEHOLDER
-    skillBoostsDamage: false
-    tl: 4
-  name: PLACEHOLDER
-  type: weapon
+  - name: D4 Weapon
+    type: weapon
+    data:
+      shock:
+        dmg: 0
+        ac: 15
+      damage: d4
+      encumbrance: 0
+      cost: 0
+      tl: 4
+      skillBoostsDamage: false
+      permission:
+        default: 0
+  - name: D6 Weapon
+    type: weapon
+    data:
+      shock:
+        dmg: 0
+        ac: 15
+      damage: d6
+      encumbrance: 0
+      cost: 0
+      tl: 4
+      skillBoostsDamage: false
+      permission:
+        default: 0
+  - name: D8 Weapon
+    type: weapon
+    data:
+      shock:
+        dmg: 0
+        ac: 15
+      damage: d8
+      encumbrance: 0
+      cost: 0
+      tl: 4
+      skillBoostsDamage: false
+      permission:
+        default: 0
+  - name: D10 Weapon
+    type: weapon
+    data:
+      shock:
+        dmg: 0
+        ac: 15
+      damage: d10
+      encumbrance: 0
+      cost: 0
+      tl: 4
+      skillBoostsDamage: false
+      permission:
+        default: 0
+  - name: D12 Weapon
+    type: weapon
+    data:
+      shock:
+        dmg: 0
+        ac: 15
+      damage: d12
+      encumbrance: 0
+      cost: 0
+      tl: 4
+      skillBoostsDamage: false
+      permission:
+        default: 0
 name: Barbarian Tribal
 type: npc
