--- a/src/packs/bestiary/Gang Member.yml
+++ b/src/packs/bestiary/Gang Member.yml
@@ -66,3 +66,16 @@ items:
       skillBoostsDamage: false
       permission:
         default: 0
+  - name: D12 Weapon
+    type: weapon
+    data:
+      shock:
+        dmg: 0
+        ac: 15
+      damage: d12
+      encumbrance: 0
+      cost: 0
+      tl: 4
+      skillBoostsDamage: false
+      permission:
+        default: 0
