--- a/src/packs/bestiary/Heavy Warbot.yml
+++ b/src/packs/bestiary/Heavy Warbot.yml
@@ -3,7 +3,7 @@ data:
   armorType: street
   attacks:
     bonusDamage: 0
-    number: 1
+    number: 2
   baseAc: 18
   description: PLACEHOLDER
   hitDice: 6
@@ -13,18 +13,18 @@ data:
   speed: 15
 img: systems/swnr/assets/icons/android.png
 items:
-  data:
-    cost: 0
-    damage: PLACEHOLDER
-    encumbrance: 0
-    permission:
-      default: 0
-    shock:
-      ac: 15
-      dmg: PLACEHOLDER
-    skillBoostsDamage: false
-    tl: 4
-  name: PLACEHOLDER
-  type: weapon
+  - name: Plasma
+    type: weapon
+    data:
+      shock:
+        dmg: 0
+        ac: 15
+      damage: 2d8
+      encumbrance: 0
+      cost: 0
+      tl: 4
+      skillBoostsDamage: false
+      permission:
+        default: 0
 name: Heavy Warbot
 type: npc
