--- a/src/packs/bestiary/Large Aggressive Prey Animal.yml
+++ b/src/packs/bestiary/Large Aggressive Prey Animal.yml
@@ -2,7 +2,7 @@ data:
   ab: 4
   armorType: primitive
   attacks:
-    damage: 1d10
+    bonusDamage: 0
     number: 1
   baseAc: 13
   hitDice: 5
@@ -12,18 +12,18 @@ data:
   speed: 15
 img: systems/swnr/assets/icons/alien-bug.png
 items:
-  data:
-    cost: 0
-    damage: PLACEHOLDER
-    encumbrance: 0
-    permission:
-      default: 0
-    shock:
-      ac: 15
-      dmg: PLACEHOLDER
-    skillBoostsDamage: false
-    tl: 4
-  name: PLACEHOLDER
-  type: weapon
+  - name: Natural Attack
+    type: weapon
+    data:
+      shock:
+        dmg: 0
+        ac: 15
+      damage: d10
+      encumbrance: 0
+      cost: 0
+      tl: 4
+      skillBoostsDamage: false
+      permission:
+        default: 0
 name: Large Aggressive Prey Animal
 type: npc
