--- a/src/packs/bestiary/Large Pack Hunter.yml
+++ b/src/packs/bestiary/Large Pack Hunter.yml
@@ -2,7 +2,7 @@ data:
   ab: 2
   armorType: primitive
   attacks:
-    damage: 1d6
+    bonusDamage: 0
     number: 1
   baseAc: 14
   hitDice: 2
@@ -12,18 +12,18 @@ data:
   speed: 15
 img: systems/swnr/assets/icons/alien-bug.png
 items:
-  data:
-    cost: 0
-    damage: PLACEHOLDER
-    encumbrance: 0
-    permission:
-      default: 0
-    shock:
-      ac: 15
-      dmg: PLACEHOLDER
-    skillBoostsDamage: false
-    tl: 4
-  name: PLACEHOLDER
-  type: weapon
+  - name: Natural Attack
+    type: weapon
+    data:
+      shock:
+        dmg: 0
+        ac: 15
+      damage: d6
+      encumbrance: 0
+      cost: 0
+      tl: 4
+      skillBoostsDamage: false
+      permission:
+        default: 0
 name: Large Pack Hunter
 type: npc
