--- a/src/packs/bestiary/Terrifying Apex Predator.yml
+++ b/src/packs/bestiary/Terrifying Apex Predator.yml
@@ -2,8 +2,8 @@ data:
   ab: 8
   armorType: primitive
   attacks:
-    damage: 1d10
-    number: 1
+    bonusDamage: 0
+    number: 2
   baseAc: 16
   hitDice: 8
   moralScore: 9
@@ -12,18 +12,18 @@ data:
   speed: 20
 img: systems/swnr/assets/icons/alien-bug.png
 items:
-  data:
-    cost: 0
-    damage: PLACEHOLDER
-    encumbrance: 0
-    permission:
-      default: 0
-    shock:
-      ac: 15
-      dmg: PLACEHOLDER
-    skillBoostsDamage: false
-    tl: 4
-  name: PLACEHOLDER
-  type: weapon
+  - name: Natural Attack
+    type: weapon
+    data:
+      shock:
+        dmg: 0
+        ac: 15
+      damage: d10
+      encumbrance: 0
+      cost: 0
+      tl: 4
+      skillBoostsDamage: false
+      permission:
+        default: 0
 name: Terrifying Apex Predator
 type: npc
