--- a/src/packs/ship-weapon/Spinal Beam Cannon.yml
+++ b/src/packs/ship-weapon/Spinal Beam Cannon.yml
@@ -15,7 +15,7 @@ data:
   minClass: cruiser
   power: 10
   powerMultiplier: false
-  qualities: AP 15
+  qualities: AP 15, Clumsy
   tl: 4
 img: systems/swnr/assets/icons/game-icons.net/item-icons/sinusoidal-beam.svg
 name: Spinal Beam Cannon
