--- a/src/packs/ship-weapon/Torpedo Launcher.yml
+++ b/src/packs/ship-weapon/Torpedo Launcher.yml
@@ -15,6 +15,10 @@ data:
   powerMultiplier: false
   qualities: AP 20
   tl: 4
+  ammo:
+    max: 4
+    type: special
+    value: 4
 img: systems/swnr/assets/icons/game-icons.net/item-icons/missile-pod.svg
 name: Torpedo Launcher
 type: shipWeapon
